--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title>DRJCounseling.com</title>
     </head>
     <body>
-        <h1>Testing</h1>
+        <h1>Coming soon</h1>
     </body>
 </html>
