fixed logo at top

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                       <div class="elementor-widget-container">
                         <div class="elementor-image">
                           <a href="#">
-                            <img src="./images/elements-brain-tech-BFKBTD.png" title="" alt=""> </a>
+                            <img src="./images/logo-green.png" title="" alt=""> </a>
                         </div>
                       </div>
                     </div>
@@ -415,24 +415,7 @@
                               <li id="menu-item-41"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-41 nav-item elementskit-mobile-builder-content"
                                 data-vertical-menu="750px"><a href="#" class="ekit-menu-nav-link">Services</a></li>
-                              <li id="menu-item-137"
-                                class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-137 nav-item elementskit-dropdown-has relative_position elementskit-dropdown-menu-default_width elementskit-mobile-builder-content"
-                                data-vertical-menu="750px"><a href="#"
-                                  class="ekit-menu-nav-link ekit-menu-dropdown-toggle">Pages<i
-                                    class="icon icon-down-arrow1 elementskit-submenu-indicator"></i></a>
-                                <ul class="elementskit-dropdown elementskit-submenu-panel">
-                                  <li id="menu-item-42"
-                                    class="menu-item menu-item-type-post_type menu-item-object-page menu-item-42 nav-item elementskit-mobile-builder-content"
-                                    data-vertical-menu="750px"><a href="#" class=" dropdown-item">Therapies</a> </li>
-                                  <li id="menu-item-40"
-                                    class="menu-item menu-item-type-post_type menu-item-object-page menu-item-40 nav-item elementskit-mobile-builder-content"
-                                    data-vertical-menu="750px"><a href="#" class=" dropdown-item">Pricing</a> </li>
-                                  <li id="menu-item-38"
-                                    class="menu-item menu-item-type-post_type menu-item-object-page menu-item-38 nav-item elementskit-mobile-builder-content"
-                                    data-vertical-menu="750px"><a href="#" class=" dropdown-item">FAQ</a></li>
-                                </ul>
-                              </li>
-                              <li id="menu-item-39"
+                              <!-- <li id="menu-item-39"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-39 nav-item elementskit-mobile-builder-content"
                                 data-vertical-menu="750px"><a href="#" class="ekit-menu-nav-link">Gallery</a></li>
                               <li id="menu-item-36"
@@ -440,12 +423,13 @@
                                 data-vertical-menu="750px"><a href="#" class="ekit-menu-nav-link">Blog</a></li>
                               <li id="menu-item-37"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-37 nav-item elementskit-mobile-builder-content"
-                                data-vertical-menu="750px"><a href="#" class="ekit-menu-nav-link">Contact</a></li>
+                                data-vertical-menu="750px"><a href="#" class="ekit-menu-nav-link">Contact</a></li> -->
                             </ul>
+                            <!-- LOGO -->
                             <div class="elementskit-nav-identity-panel">
                               <div class="elementskit-site-title">
                                 <a class="elementskit-nav-logo" href="#" target="_self" rel="">
-                                  <img src="./images/elements-brain-tech-BFKBTD.png" alt="">
+                                  <img src="./images/logo-green.png" alt="">
                                 </a>
                               </div>
                               <button class="elementskit-menu-close elementskit-menu-toggler" type="button">X</button>
@@ -465,7 +449,6 @@
                           <!-- link opening -->
                           <a href="https://your-link.com/" target="_self" rel="" class="ekit_global_links">
                             <!-- end link opening -->
-
                             <div
                               class="elementskit-infobox text-center text- icon-top-align elementor-animation-    ekit-hover-btn-horizontal-align-">
                               <div class="elementskit-box-header elementor-animation-">
@@ -474,7 +457,6 @@
                                 </div>
                               </div>
                               <div class="box-body"></div>
-
                             </div>
                           </a>
                         </div>
@@ -484,7 +466,7 @@
                       class="elementor-element elementor-element-bdc20aa elementor-widget__width-auto elementor-hidden-phone elementor-widget elementor-widget-heading"
                       data-id="bdc20aa" data-element_type="widget" data-widget_type="heading.default">
                       <div class="elementor-widget-container">
-                        <h6 class="elementor-heading-title elementor-size-default">+123 456 78 90</h6>
+                        <h6 class="elementor-heading-title elementor-size-default">706-383-7065</h6>
                       </div>
                     </div>
                   </div>
@@ -898,7 +880,7 @@
                                   data-id="677f77b0" data-element_type="widget" data-widget_type="image.default">
                                   <div class="elementor-widget-container">
                                     <div class="elementor-image">
-                                      <img width="165" height="49" src="./images/sign.jpg" class="attachment-full size-full" alt="" loading="lazy">
+                                      <img width="165" height="49" src="./images/signature.jpg" class="attachment-full size-full" alt="" loading="lazy">
                                     </div>
                                   </div>
                                 </div> -->
