--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     media="all">
   <link rel="stylesheet" id="ekit-responsive-css" href="./styles/responsive.css" type="text/css" media="all">
   <link rel="stylesheet" id="google-fonts-1-css" href="./styles/google-fonts.css" type="text/css" media="all">
+  <link rel="stylesheet" id="custom-css" href="./styles/custom.css" type="text/css" media="all">
 
   <!-- Javascript -->
   <script type="text/javascript" src="./scripts/jquery.js" id="jquery-core-js"></script>
@@ -406,26 +407,19 @@
                             ekit-dom-added="yes">
                             <ul id="main-menu"
                               class="elementskit-navbar-nav elementskit-menu-po-right submenu-click-on-icon">
-                              <li id="menu-item-44"
-                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-17 current_page_item menu-item-44 nav-item elementskit-mobile-builder-content active"
+                              <li id="menu-item-1"
+                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-17 current_page_item menu-item-1 nav-item elementskit-mobile-builder-content active"
                                 data-vertical-menu="750px"><a href="#" class="ekit-menu-nav-link active">Home</a></li>
-                              <li id="menu-item-35"
-                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-35 nav-item elementskit-mobile-builder-content"
-                                data-vertical-menu="750px"><a href="#" class="ekit-menu-nav-link">About</a></li>
-                              <li id="menu-item-41"
-                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-41 nav-item elementskit-mobile-builder-content"
-                                data-vertical-menu="750px"><a href="#" class="ekit-menu-nav-link">Services</a></li>
-                              <!-- <li id="menu-item-39"
-                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-39 nav-item elementskit-mobile-builder-content"
-                                data-vertical-menu="750px"><a href="#" class="ekit-menu-nav-link">Gallery</a></li>
-                              <li id="menu-item-36"
-                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-36 nav-item elementskit-mobile-builder-content"
-                                data-vertical-menu="750px"><a href="#" class="ekit-menu-nav-link">Blog</a></li>
-                              <li id="menu-item-37"
-                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-37 nav-item elementskit-mobile-builder-content"
-                                data-vertical-menu="750px"><a href="#" class="ekit-menu-nav-link">Contact</a></li> -->
+                              <li id="menu-item-2"
+                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2 nav-item elementskit-mobile-builder-content"
+                                data-vertical-menu="750px"><a href="#section-2-my-focus" class="ekit-menu-nav-link">About</a></li>
+                              <li id="menu-item-3"
+                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3 nav-item elementskit-mobile-builder-content"
+                                data-vertical-menu="750px"><a href="#section-3-services" class="ekit-menu-nav-link">Services</a></li>
+                              <li id="menu-item-4"
+                              class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4 nav-item elementskit-mobile-builder-content"
+                              data-vertical-menu="750px"><a href="#section-4-my-story" class="ekit-menu-nav-link">My Story</a></li>
                             </ul>
-                            <!-- LOGO -->
                             <div class="elementskit-nav-identity-panel">
                               <div class="elementskit-site-title">
                                 <a class="elementskit-nav-logo" href="#" target="_self" rel="">
@@ -735,7 +729,8 @@
           </div>
         </section>
 
-        <!-- ABOUT SECTION -->
+        <!-- SECTION #2 - ABOUT -->
+        <a id="section-2-my-focus"></a>
         <section
           class="elementor-section elementor-top-section elementor-element elementor-element-3a5431f elementor-section-boxed elementor-section-height-default elementor-section-height-default"
           data-id="3a5431f" data-element_type="section"
@@ -911,6 +906,8 @@
           </div>
         </section>
 
+        <!-- SECTION #3 - SERVICES -->
+        <a id="section-3-services"></a>
         <section
           class="elementor-section elementor-top-section elementor-element elementor-element-584909bc elementor-section-boxed elementor-section-height-default elementor-section-height-default"
           data-id="584909bc" data-element_type="section"
@@ -1201,6 +1198,8 @@
           </div>
         </section>
         
+        <!-- SECTION #4 - MY STORY -->
+        <a id="section-4-my-story"></a>
         <section
           class="elementor-section elementor-top-section elementor-element elementor-element-384e7501 elementor-section-boxed elementor-section-height-default elementor-section-height-default"
           data-id="384e7501" data-element_type="section"
@@ -1398,7 +1397,7 @@
                       data-id="77f31a43" data-element_type="widget" data-widget_type="image.default">
                       <div class="elementor-widget-container">
                         <div class="elementor-image">
-                          <img src="./images/elements-brain-tech-BFKBTD-2.png" title="" alt=""> </div>
+                          <img src="./images/logo-white.png" title="logo" alt="Debbie R. Johnson, LPC"> </div>
                       </div>
                     </div>
                     <div
@@ -1408,40 +1407,6 @@
                         <div class="elementor-text-editor elementor-clearfix">
                           <p>Lorem ipsum dolor sit amet, tet adipiscing elit nulla finibus.
                           </p>
-                        </div>
-                      </div>
-                    </div>
-                    <div
-                      class="elementor-element elementor-element-39a94974 elementor-widget elementor-widget-elementskit-social-media"
-                      data-id="39a94974" data-element_type="widget" data-widget_type="elementskit-social-media.default">
-                      <div class="elementor-widget-container">
-                        <div class="ekit-wid-con">
-                          <ul class="ekit_social_media">
-                            <li class="elementor-repeater-item-129a918">
-                              <a href="#" class="facebook">
-
-                                <i aria-hidden="true" class="icon icon-facebook"></i>
-                              </a>
-                            </li>
-                            <li class="elementor-repeater-item-5b24dc7">
-                              <a href="#" class="1">
-
-                                <i aria-hidden="true" class="icon icon-twitter-1"></i>
-                              </a>
-                            </li>
-                            <li class="elementor-repeater-item-9f4e12c">
-                              <a href="#" class="plus">
-
-                                <i aria-hidden="true" class="icon icon-google-plus"></i>
-                              </a>
-                            </li>
-                            <li class="elementor-repeater-item-4e4c600">
-                              <a href="#" class="2">
-
-                                <i aria-hidden="true" class="icon icon-instagram-2"></i>
-                              </a>
-                            </li>
-                          </ul>
                         </div>
                       </div>
                     </div>
@@ -1517,18 +1482,6 @@
                               <span class="elementor-icon-list-text">Mandated Reporter</span>
                             </a>
                           </li>
-                          <li class="elementor-icon-list-item">
-                            <a href="#">
-                              <!-- TODO: -->
-                              <span class="elementor-icon-list-text">Resource #3</span>
-                            </a>
-                          </li>
-                          <li class="elementor-icon-list-item">
-                            <a href="#">
-                              <!-- TODO: -->
-                              <span class="elementor-icon-list-text">Resource #4</span>
-                            </a>
-                          </li>
                         </ul>
                       </div>
                     </div>
@@ -1600,12 +1553,12 @@
                             <span class="elementor-icon-list-icon">
                               <i aria-hidden="true" class="icon icon-envelope11"></i>
                             </span>
-                            <span class="elementor-icon-list-text">info@example.com</span>
+                            <a class="footer-link" href="mailto:debbierjohnson.lpc@gmail.com"><span class="elementor-icon-list-text">debbierjohnson.lpc@gmail.com</span></a></span>
                           </li>
                           <li class="elementor-icon-list-item">
                             <span class="elementor-icon-list-icon">
                               <i aria-hidden="true" class="icon icon-phone1"></i> </span>
-                            <span class="elementor-icon-list-text">123-456-7890</span>
+                            <span class="elementor-icon-list-text">706-383-7065</span>
                           </li>
                         </ul>
                       </div>
