--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                       data-widget_type="button.default">
                       <div class="elementor-widget-container">
                         <div class="elementor-button-wrapper">
-                          <a href="#" class="elementor-button-link elementor-button elementor-size-sm" role="button">
+                          <a href="mailto:debbierjohnson.lpc@gmail.com" target="_blank" class="elementor-button-link elementor-button elementor-size-sm" role="button">
                             <span class="elementor-button-content-wrapper">
                               <span class="elementor-button-text">Email to Schedule a Consultation</span>
                             </span>
