--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
                                           <div class="elementskit-info-box-icon ">
                                             <img
                                               src="./images/services-icon-light-bulb.png"
-                                              alt="Psycho Therapy">
+                                              alt="Online Counseling">
                                           </div>
                                         </div>
                                         <div class="box-body">
@@ -607,7 +607,7 @@
                                           <div class="elementskit-info-box-icon ">
                                             <img
                                               src="./images/services-icon-brain-heart.png"
-                                              alt="Couples Therapy">
+                                              alt="Individual Therapy">
                                           </div>
                                         </div>
                                         <div class="box-body">
@@ -660,7 +660,7 @@
                                           <div class="elementskit-info-box-icon ">
                                             <img
                                               src="./images/services-icon-couples-heart.png"
-                                              alt="Individual Therapy">
+                                              alt="Couples Therapy">
                                           </div>
                                         </div>
                                         <div class="box-body">
