Removed last of proprietary images

--- a/index.html
+++ b/index.html
@@ -1305,7 +1305,7 @@
                 </div>
               </div>
               
-              <!-- RIGHT SIDE COUNSELOR PHOTO GRAPHIC(S) -->
+              <!-- RIGHT SIDE COUNSELOR HEADSHOT -->
               <!-- <div
                 class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-37882acf"
                 data-id="37882acf" data-element_type="column">
@@ -1332,31 +1332,12 @@
                                       <div class="profile-image-card ekit-team-img ekit-team-style-overlay text-center">
 
                                         <img loading="lazy" width="400" height="400"
-                                          src="./images/professional-salesperson-in-car-dealership-6M4QTK3.jpg"
+                                          src="./images/section-my-story-headshot.jpg"
                                           class="attachment-full size-full">
                                         <div class="hover-area">
                                           <div class="profile-body">
                                             <h2 class="profile-title">Debbie R. Johnson</h2>
                                             <p class="profile-designation">Licensed Professional Counselor</p>
-                                          </div>
-                                          <div class="profile-footer">
-                                            <ul class="ekit-team-social-list">
-                                              <li class="elementor-repeater-item-f7eb32e">
-                                                <a href="#">
-                                                  <i aria-hidden="true" class="icon icon-facebook"></i>
-                                                </a>
-                                              </li>
-                                              <li class="elementor-repeater-item-860dfe8">
-                                                <a href="#">
-                                                  <i aria-hidden="true" class="icon icon-twitter-1"></i>
-                                                </a>
-                                              </li>
-                                              <li class="elementor-repeater-item-1ee0f49">
-                                                <a href="#">
-                                                  <i aria-hidden="true" class="icon icon-google-plus"></i>
-                                                </a>
-                                              </li>
-                                            </ul>
                                           </div>
                                         </div>
                                       </div>
