--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,7 @@
                       data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;,&quot;_animation_delay&quot;:500}"
                       data-widget_type="heading.default">
                       <div class="elementor-widget-container">
-                        <h4 class="elementor-heading-title elementor-size-default">Insurance Accepted</h4>
+                        <h4 class="elementor-heading-title elementor-size-default services-subheader">Insurance Accepted</h4>
                       </div>
                     </div>
 
