Content updates from Debbie

--- a/index.html
+++ b/index.html
@@ -508,9 +508,9 @@
                       data-widget_type="button.default">
                       <div class="elementor-widget-container">
                         <div class="elementor-button-wrapper">
-                          <a href="mailto:debbierjohnson.lpc@gmail.com" target="_blank" class="elementor-button-link elementor-button elementor-size-sm" role="button">
+                          <a href="#section-5-contact" target="_blank" class="elementor-button-link elementor-button elementor-size-sm" role="button">
                             <span class="elementor-button-content-wrapper">
-                              <span class="elementor-button-text">Email to Schedule a Consultation</span>
+                              <span class="elementor-button-text">Call or Email to Schedule a Consultation</span>
                             </span>
                           </a>
                         </div>
@@ -568,8 +568,7 @@
                                         </div>
                                         <div class="box-body">
                                           <h3 class="elementskit-info-box-title">Online Counseling</h3>
-                                          <p>Lorem ipsum dolor sit amet, sectetur adipiscing elit, sed do mod tempor
-                                            incididunt ut labore dolore.
+                                          <p>Online therapy sessions are an increasingly popular and  attractive option for many reasons: busy schedules, no commute, flexibility. Whatever your motivation, I've got you covered!
                                           </p>
                                           <div class="box-footer disable_hover_button">
                                             <div class="btn-wraper">
@@ -580,8 +579,6 @@
                                             </div>
                                           </div>
                                         </div>
-
-
                                       </div>
                                     </div>
                                   </div>
@@ -612,7 +609,7 @@
                                         </div>
                                         <div class="box-body">
                                           <h3 class="elementskit-info-box-title">Individual Therapy</h3>
-                                          <p>Lorem ipsum dolor sit amet, sectetur adipiscing elit, sed do mod tempor incididunt ut labore dolore.
+                                          <p>Life is hard.  The truth is, everyone deals with something at one point or another. Together we'll identify the best ways for you to improve your overall well-being and find the peace and happiness you are seeking.
                                           </p>
                                         </div>
                                       </div>
@@ -665,7 +662,7 @@
                                         </div>
                                         <div class="box-body">
                                           <h3 class="elementskit-info-box-title">Couples Therapy</h3>
-                                          <p>Lorem ipsum dolor sit amet, sectetur adipiscing elit, sed do mod tempor incididunt ut labore dolore.
+                                          <p>Are you happy with the way things are in your relationship with your spouse or significant other? Do you worry that your relationship isn't taking the direction you'd hoped or you are not where you thought you would be? Therapy is the safe place to unpack all those thoughts and feelings you've been trying to make sense of on your own. I can help you hear each other.
                                           </p>
                                           <div class="box-footer disable_hover_button">
                                             <div class="btn-wraper">
@@ -846,9 +843,9 @@
                             achieve emotional well-being and balance through a non-judgmental, person-centered
                             therapeutic approach.</p>
 
-                          <p>Eget laudantium hendrerit convallis culpa modi conubia minima feugiat, facere dolore natus blandit, hic mollis sequi! Commodo iste! Voluptas vitae, inceptos ipsa totam diamlorem magna? Consectetur nostra dolor dolores iusto.</p>
+                          <p>There is hope. You don't have to continue living with constant stress, depression, or anxiety. Your relationship does not have to remain unfulfilling or even toxic. You can regain the balance you need to thrive. And what's even better...you don't have to do it on your own.</p>
 
-                          <p>Iusto eum suscipit dolores senectus egestas harum? Mauris class tenetur luctus primis semper tempor condimentum egestas magnis auctor. Erat! Consequat tempore ligula habitasse mattis parturient sit hic do.</p>
+                          <p>Let me help you find your voice and own your power. Everybody hurts...sometimes. It does not have to be forever.</p>
                         </div>
                       </div>
                     </div>
@@ -1003,9 +1000,7 @@
                       data-widget_type="text-editor.default">
                       <div class="elementor-widget-container">
                         <div class="elementor-text-editor elementor-clearfix">
-                          <p>Mauris cursus posuere sem non fermentum donec condime ntum, nibh
-                            ut viverra molestie, urna dui convallis tortor, sed dignissim
-                            arcu ex sed</p>
+                          <p>Just a few of the services provided...</p>
                         </div>
                       </div>
                     </div>
@@ -1033,7 +1028,7 @@
                                         <span class="elementor-icon-list-icon">
                                           <i aria-hidden="true" class="icon icon-right-mark"></i>
                                         </span>
-                                        <span class="elementor-icon-list-text">Anger Therapy</span>
+                                        <span class="elementor-icon-list-text">Depression Therapy</span>
                                       </li>
                                       <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
@@ -1045,13 +1040,13 @@
                                         <span class="elementor-icon-list-icon">
                                           <i aria-hidden="true" class="icon icon-chevron-right-circle"></i>
                                         </span>
-                                        <span class="elementor-icon-list-text">Pre-marital counseling</span>
+                                        <span class="elementor-icon-list-text">Stress Management</span>
                                       </li>
                                       <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
                                           <i aria-hidden="true" class="icon icon-chevron-right-circle"></i>
                                         </span>
-                                        <span class="elementor-icon-list-text">Depression Therapy</span>
+                                        <span class="elementor-icon-list-text">Anger Management</span>
                                       </li>
                                     </ul>
                                   </div>
@@ -1075,19 +1070,19 @@
                                         <span class="elementor-icon-list-icon">
                                           <i aria-hidden="true" class="icon icon-chevron-right-circle"></i>
                                         </span>
-                                        <span class="elementor-icon-list-text">Self Esteem Therapy</span>
-                                      </li>
-                                      <li class="elementor-icon-list-item">
-                                        <span class="elementor-icon-list-icon">
-                                          <i aria-hidden="true" class="icon icon-chevron-right-circle"></i>
-                                        </span>
-                                        <span class="elementor-icon-list-text">Stress Management</span>
+                                        <span class="elementor-icon-list-text">Pre-marital Counseling</span>
                                       </li>
                                       <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
                                           <i aria-hidden="true" class="icon icon-chevron-right-circle"></i>
                                         </span>
                                         <span class="elementor-icon-list-text">Relational Issues</span>
+                                      </li>
+                                      <li class="elementor-icon-list-item">
+                                        <span class="elementor-icon-list-icon">
+                                          <i aria-hidden="true" class="icon icon-chevron-right-circle"></i>
+                                        </span>
+                                        <span class="elementor-icon-list-text">Self Esteem Therapy</span>
                                       </li>
                                     </ul>
                                   </div>
@@ -1129,6 +1124,12 @@
                                   data-id="53c9b7d9" data-element_type="widget" data-widget_type="icon-list.default">
                                   <div class="elementor-widget-container">
                                     <ul class="elementor-icon-list-items">
+                                      <li class="elementor-icon-list-item">
+                                        <span class="elementor-icon-list-icon">
+                                          <i aria-hidden="true" class="icon icon-right-mark"></i>
+                                        </span>
+                                        <span class="elementor-icon-list-text">Aetna</span>
+                                      </li>
                                       <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
                                           <i aria-hidden="true" class="icon icon-right-mark"></i>
@@ -1357,7 +1358,8 @@
           </div>
         </section>
 
-        <!-- FOOTER -->
+        <!-- SECTION #5 - FOOTER -->
+        <a id="section-5-contact"></a>
         <section
           class="elementor-section elementor-top-section elementor-element elementor-element-3cc6f0d6 elementor-section-boxed elementor-section-height-default elementor-section-height-default animated fadeInUp"
           data-id="3cc6f0d6" data-element_type="section"
@@ -1365,8 +1367,7 @@
           <div class="elementor-container elementor-column-gap-default">
             <div class="elementor-row">
               <!-- FOOTER > 1 > IDENTITY -->
-              <div
-                class="elementor-column elementor-col-50 elementor-top-column elementor-element"
+              <div class="elementor-column elementor-col-66 elementor-top-column elementor-element"
                 data-id="8f763c8" data-element_type="column">
                 <div class="elementor-column-wrap elementor-element-populated">
                   <div class="elementor-widget-wrap">
@@ -1382,8 +1383,7 @@
                       data-id="503dce19" data-element_type="widget" data-widget_type="text-editor.default">
                       <div class="elementor-widget-container">
                         <div class="elementor-text-editor elementor-clearfix">
-                          <p>Lorem ipsum dolor sit amet, tet adipiscing elit nulla finibus.
-                          </p>
+                          <p>Offering online, individual, and couples therapy in Augusta, Georgia.</p>
                         </div>
                       </div>
                     </div>
@@ -1402,73 +1402,10 @@
                   </div>
                 </div>
               </div>
-              <!-- FOOTER > 2 > RESOURCES -->
-              <div
-                class="elementor-column elementor-col-25 elementor-top-column elementor-element elementor-element-da8320b"
-                data-id="da8320b" data-element_type="column">
-                <div class="elementor-column-wrap elementor-element-populated">
-                  <div class="elementor-widget-wrap">
-                    <section
-                      class="elementor-section elementor-inner-section elementor-element elementor-element-608a781b elementor-section-boxed elementor-section-height-default elementor-section-height-default"
-                      data-id="608a781b" data-element_type="section"
-                      data-settings="{&quot;ekit_has_onepagescroll_dot&quot;:&quot;yes&quot;}">
-                      <div class="elementor-container elementor-column-gap-default">
-                        <div class="elementor-row">
-                          <div
-                            class="elementor-column elementor-col-100 elementor-inner-column elementor-element elementor-element-6150db2a"
-                            data-id="6150db2a" data-element_type="column">
-                            <div class="elementor-column-wrap elementor-element-populated">
-                              <div class="elementor-widget-wrap">
-                                <div
-                                  class="elementor-element elementor-element-71a6d9d0 elementor-widget__width-auto elementor-absolute elementor-widget-divider--view-line elementor-widget elementor-widget-divider"
-                                  data-id="71a6d9d0" data-element_type="widget"
-                                  data-settings="{&quot;_position&quot;:&quot;absolute&quot;}"
-                                  data-widget_type="divider.default">
-                                  <div class="elementor-widget-container">
-                                    <div class="elementor-divider">
-                                      <span class="elementor-divider-separator">
-                                      </span>
-                                    </div>
-                                  </div>
-                                </div>
-                                <div
-                                  class="elementor-element elementor-element-d84b41c elementor-widget elementor-widget-heading"
-                                  data-id="d84b41c" data-element_type="widget" data-widget_type="heading.default">
-                                  <div class="elementor-widget-container">
-                                    <h5 class="elementor-heading-title elementor-size-default">Resources</h5>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </section>
-                    <div
-                      class="elementor-element elementor-element-35d986c1 elementor-icon-list--layout-traditional elementor-list-item-link-full_width elementor-widget elementor-widget-icon-list"
-                      data-id="35d986c1" data-element_type="widget" data-widget_type="icon-list.default">
-                      <div class="elementor-widget-container">
-                        <ul class="elementor-icon-list-items">
-                          <li class="elementor-icon-list-item">
-                            <a href="https://www.lpcaga.org/" target="_blank">
-                              <span class="elementor-icon-list-text">LPCAGA.org</span>
-                            </a>
-                          </li>
-                          <li class="elementor-icon-list-item">
-                            <a href="https://oca.georgia.gov/training/mandated-reporting" target="_blank">
-                              <span class="elementor-icon-list-text">Mandated Reporter</span>
-                            </a>
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
               
-              <!-- FOOTER > 3 > CONTACT INFO -->
+              <!-- FOOTER > 2 > CONTACT INFO -->
               <div
-                class="elementor-column elementor-col-25 elementor-top-column elementor-element elementor-element-baff7bb"
+                class="elementor-column elementor-col-33 elementor-top-column elementor-element elementor-element-baff7bb"
                 data-id="baff7bb" data-element_type="column">
                 <div class="elementor-column-wrap elementor-element-populated">
                   <div class="elementor-widget-wrap">
