Removed sentence under couples therapy

--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
                                         </div>
                                         <div class="box-body">
                                           <h3 class="elementskit-info-box-title">Couples Therapy</h3>
-                                          <p>Are you happy with the way things are in your relationship with your spouse or significant other? Do you worry that your relationship isn't taking the direction you'd hoped or you are not where you thought you would be? Therapy is the safe place to unpack all those thoughts and feelings you've been trying to make sense of on your own. I can help you hear each other.
+                                          <p>Are you happy with the way things are in your relationship with your spouse or significant other? Therapy is the safe place to unpack all those thoughts and feelings you've been trying to make sense of on your own. I can help you hear each other.
                                           </p>
                                           <div class="box-footer disable_hover_button">
                                             <div class="btn-wraper">
