--- a/index.html
+++ b/index.html
@@ -570,14 +570,6 @@
                                           <h3 class="elementskit-info-box-title">Online Counseling</h3>
                                           <p>Online therapy sessions are an increasingly popular and  attractive option for many reasons: busy schedules, no commute, flexibility. Whatever your motivation, I've got you covered!
                                           </p>
-                                          <div class="box-footer disable_hover_button">
-                                            <div class="btn-wraper">
-                                              <a href="#" target="_self" rel=""
-                                                class="elementskit-btn elementor-animation-">
-                                                <i aria-hidden="true" class="icon icon-arrow-right"></i>
-                                              </a>
-                                            </div>
-                                          </div>
                                         </div>
                                       </div>
                                     </div>
@@ -602,9 +594,7 @@
                                         class="elementskit-infobox text-center text- icon-top-align elementor-animation-  ekit-hover-btn-horizontal-align-">
                                         <div class="elementskit-box-header">
                                           <div class="elementskit-info-box-icon ">
-                                            <img
-                                              src="./images/services-icon-brain-heart.png"
-                                              alt="Individual Therapy">
+                                            <img src="./images/services-icon-brain-heart.png" alt="Individual Therapy">
                                           </div>
                                         </div>
                                         <div class="box-body">
@@ -623,13 +613,7 @@
                                   data-widget_type="elementskit-icon-box.default">
                                   <div class="elementor-widget-container">
                                     <div class="ekit-wid-con">
-                                        <div
-                                          class="elementskit-infobox text-center text- icon-top-align elementor-animation- ekit-hover-btn-horizontal-align-">
-                                          <div class="elementskit-box-header elementor-animation-">
-                                            <div class="elementskit-info-box-icon">
-                                              <i aria-hidden="true" class="elementkit-infobox-icon icon icon-arrow-right"></i>
-                                            </div>
-                                          </div>
+                                        <div class="elementskit-infobox text-center text- icon-top-align elementor-animation- ekit-hover-btn-horizontal-align-">
                                           <div class="box-body">
                                           </div>
                                         </div>
@@ -655,23 +639,13 @@
                                         class="elementskit-infobox text-center text- icon-top-align elementor-animation-  ekit-hover-btn-horizontal-align-">
                                         <div class="elementskit-box-header">
                                           <div class="elementskit-info-box-icon ">
-                                            <img
-                                              src="./images/services-icon-couples-heart.png"
-                                              alt="Couples Therapy">
+                                            <img src="./images/services-icon-couples-heart.png" alt="Couples Therapy">
                                           </div>
                                         </div>
                                         <div class="box-body">
                                           <h3 class="elementskit-info-box-title">Couples Therapy</h3>
-                                          <p>Are you happy with the way things are in your relationship with your spouse or significant other? Therapy is the safe place to unpack all those thoughts and feelings you've been trying to make sense of on your own. I can help you hear each other.
+                                          <p>Are you happy with the way things are with your spouse or significant other? Therapy is the safe place to unpack all those thoughts and feelings you've been trying to make sense of on your own. I can help you hear each other.
                                           </p>
-                                          <div class="box-footer disable_hover_button">
-                                            <div class="btn-wraper">
-                                              <a href="#" target="_self" rel=""
-                                                class="elementskit-btn elementor-animation-">
-                                                <i aria-hidden="true" class="icon icon-arrow-right"></i>
-                                              </a>
-                                            </div>
-                                          </div>
                                         </div>
                                       </div>
                                     </div>
