Updated headshot and css

--- a/index.html
+++ b/index.html
@@ -554,9 +554,6 @@
                                   data-widget_type="elementskit-icon-box.default">
                                   <div class="elementor-widget-container">
                                     <div class="ekit-wid-con">
-                                      <!-- link opening -->
-                                      <!-- end link opening -->
-
                                       <div
                                         class="elementskit-infobox text-center text- icon-top-align elementor-animation-    ekit-hover-btn-horizontal-align-">
                                         <div class="elementskit-box-header">
@@ -833,7 +830,7 @@
                           <div
                             class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-121dcfd0 animated fadeInLeft"
                             data-id="121dcfd0" data-element_type="column"
-                            data-settings="{&quot;animation&quot;:&quot;fadeInLeft&quot;,&quot;animation_delay&quot;:900}">
+                            data-settings="{&quot;animation&quot;:&quot;fadeInLeft&quot;,&quot;animation_delay&quot;:700}">
                             <div class="elementor-column-wrap elementor-element-populated">
                               <div class="elementor-widget-wrap">
                                 <!-- TODO: Add signature here as a nice touch -->
@@ -1281,7 +1278,7 @@
               </div>
               
               <!-- RIGHT SIDE COUNSELOR HEADSHOT -->
-              <!-- <div
+              <div
                 class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-37882acf"
                 data-id="37882acf" data-element_type="column">
                 <div class="elementor-column-wrap elementor-element-populated">
@@ -1327,7 +1324,7 @@
                     </section>
                   </div>
                 </div>
-              </div> -->
+              </div>
             </div>
           </div>
         </section>
@@ -1337,7 +1334,7 @@
         <section
           class="elementor-section elementor-top-section elementor-element elementor-element-3cc6f0d6 elementor-section-boxed elementor-section-height-default elementor-section-height-default animated fadeInUp"
           data-id="3cc6f0d6" data-element_type="section"
-          data-settings="{&quot;background_background&quot;:&quot;classic&quot;,&quot;animation&quot;:&quot;fadeInUp&quot;,&quot;animation_delay&quot;:500,&quot;ekit_has_onepagescroll_dot&quot;:&quot;yes&quot;}">
+          data-settings="{&quot;background_background&quot;:&quot;classic&quot;,&quot;animation&quot;:&quot;fadeInUp&quot;,&quot;animation_delay&quot;:0,&quot;ekit_has_onepagescroll_dot&quot;:&quot;yes&quot;}">
           <div class="elementor-container elementor-column-gap-default">
             <div class="elementor-row">
               <!-- FOOTER > 1 > IDENTITY -->
